Header on Mobile Fixed Adjusted

--- a/src/mediaQuery.css
+++ b/src/mediaQuery.css
@@ -97,7 +97,7 @@
   .main-header {
     padding: 10px 0;
     .container {
-      height: 20px;
+      height: 30px;
     }
   }
   .lang-button {
